--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -103,7 +103,7 @@
         <div class="footer__content__gap"></div>
         <div class="footer__content__col">
             <a href="https://www.darujme.cz/projekt/1200384">Finanční podpora</a>
-            <a href="/api">API a Open Data pro vývojáře</a>
+            <a href="/api">API a Open data pro vývojáře</a>
             <a href="/texty/provoznipodminky/">Podmínky užívání a ochrana soukromí</a>
         </div>
         <div class="footer__content__gap"></div>
