--- a/Web.Statu/Views/Insolvence/TextDokumentu.cshtml
+++ b/Web.Statu/Views/Insolvence/TextDokumentu.cshtml
@@ -20,7 +20,7 @@
 {
 	<p>
 		<b>Upozornění</b>: Text dokumentu byl získán strojově a nemusí přesně odpovídat originálu. Zejména u strojově nečitelných dokumentů, kde jsme použili OCR.
-		<a href="@Model.Dokument.Url" target="_blank">originál dokument stáhnete odsud</a>
+		<a href="@Model.Dokument.Url" target="_blank">Originální dokument stáhnete zde</a>
 	</p>
 
 	<hr />
