--- a/Web.Statu/Views/Insolvence/_SearchFormHelpContent.cshtml
+++ b/Web.Statu/Views/Insolvence/_SearchFormHelpContent.cshtml
@@ -30,12 +30,17 @@
 		<kbd>spisovaZnacka:"INS 23128/2017"</kbd> - konkrétní insolvenční řízení<br />
 		<kbd>soud:ksos</kbd> - řešené konkrétním soudem <br />
 		<kbd>stav:konkurs</kbd> - řízení ve stavu<br />
-		<kbd>datumZalozeni:rok-mesic-den</kbd> - insolvenční řízení s datem založení, formát data YYYY-MM-DD <span style="color:red;font-weight:bold">TODO</span><br />
-		<kbd>datumZalozeni:[2016-07-01 TO 2016-07-31]</kbd> - insolvenční řízení založené v srpnu 2016. <span style="color:red;font-weight:bold">TODO</span><br />
-		<kbd>posledniZmena:rok-mesic-den</kbd> - insolvenční řízení změněné dne. <span style="color:red;font-weight:bold">TODO</span><br />
-		<kbd>posledniZmena:[2016-01-01 TO 2016-12-31]</kbd> - insolvenční řízení změněné v roce 2016. <span style="color:red;font-weight:bold">TODO</span><br />
-		<kbd>ico:12345678</kbd> - jedna ze stran má uvedené IČO <span style="color:red;font-weight:bold">TODO</span><br />
-		<kbd>nazev:"Petr Novák"</kbd> - jméno osoby či společnosti jedné ze stran <span style="color:red;font-weight:bold">TODO</span><br />
+		<kbd>datumZalozeni:rok-mesic-den</kbd> - insolvenční řízení s datem založení, formát data YYYY-MM-DD<br />
+		<kbd>datumZalozeni:[2016-07-01 TO 2016-07-31]</kbd> - insolvenční řízení založené v srpnu 2016<br />
+		<kbd>posledniZmena:rok-mesic-den</kbd> - insolvenční řízení změněné dne<br />
+		<kbd>posledniZmena:[2016-01-01 TO 2016-12-31]</kbd> - insolvenční řízení změněné v roce 2016<br />
+		<kbd>ico:12345678</kbd> - jedna ze stran má uvedené IČO<br />
+		<kbd>icodluznik:12345678</kbd> - dlužník má uvedené IČO<br />
+		<kbd>icoveritel:12345678</kbd> - věřitel má uvedené IČO<br />
+		<kbd>icospravce:12345678</kbd> - správce má uvedené IČO<br />
+		<kbd>jmenodluznik:"Petr Novák"</kbd> - jméno osoby či společnosti na straně dlužníka<br />
+		<kbd>jmenoveritel:"Petr Novák"</kbd> - jméno osoby či společnosti na straně věřitele<br />
+		<kbd>jmenospravce:"Petr Novák"</kbd> - jméno osoby či společnosti na straně správce<br />
 	</dd>
 </dl>
 <h3>Podporované stavy řízení</h3>
