--- a/Web.Statu/Views/Insolvence/Index.cshtml
+++ b/Web.Statu/Views/Insolvence/Index.cshtml
@@ -12,16 +12,18 @@
 
 }
 
-
 @section breadcrumb
 {
-    <ol class="breadcrumb">
-        <li><a href="/">Hlídač Státu</a></li>
-        <li class="active">Hlídač Insolvencí</li>
-    </ol>
+	<ol class="breadcrumb">
+		<li><a href="/">Hlídač Státu</a></li>
+		<li class="active">Hlídač Insolvencí</li>
+	</ol>
 }
-@Html.Partial("_SearchForm", new HlidacStatu.Lib.ES.InsolvenceSearchResult())
 
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+
+@Html.Partial("_SearchForm", new HlidacStatu.Lib.ES.InsolvenceSearchResult())
 
 <hr />
 
@@ -40,7 +42,7 @@
 				});
 		}
 
-		@Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = spolecnosti });
+		@Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = spolecnosti, ShowAsDataTable = true, Typ = "spolecnosti" })
 	</div>
 
 	<div class="col-xs-6 col-sm-6" style="padding:5px">
@@ -57,30 +59,30 @@
 				});
 		}
 
-		@Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = osoby })
+		@Html.Partial("_PeopleList", new PeopleListViewModel { Osoby = osoby, ShowAsDataTable = true, Typ = "osoby" })
 	</div>
 </div>
 
 <h2>Ukázky možností <span style="color:red; font-weight:bold">TODO</span></h2>
 <ul>
-    <li>
-        <a href="/verejnezakazky/hledat?Q=*&order=1">Poslední veřejné zakázky</a>
-    </li>
-    <li>
-        <a href="/verejnezakazky/hledat?Q=*%20oblast:IT&order=1">Poslední veřejné zakázky v oboru IT</a>
-    </li>
-    <li>
-        <a href="/verejnezakazky/hledat?Q=ico%3A66002222&order=1">Poslední veřejné zakázky od Ministerstva pro místní rozvoj</a>
-    </li>
-    <li>
-        <a href="/verejnezakazky/hledat?Q=ico%3A66002222%20oblast:IT&order=1">Poslední veřejné zakázky týkající se IT od MMR</a>
-    </li>
-    <li>
-        <a href="/verejnezakazky/hledat?Q=ico%3A66002222%20cpv:72,48&order=1">Poslední veřejné zakázky od MMR podle CPV kódu</a>
-    </li>
-    <li>
-        <a href="/verejnezakazky/hledat?Q=ico%3A66002222%20AND%20%28NEN%20OR%20NIPEZ%29&order=1">Poslední veřejné zakázky týkající se NEN a NIPEZ</a>
-    </li>
+	<li>
+		<a href="/verejnezakazky/hledat?Q=*&order=1">Poslední veřejné zakázky</a>
+	</li>
+	<li>
+		<a href="/verejnezakazky/hledat?Q=*%20oblast:IT&order=1">Poslední veřejné zakázky v oboru IT</a>
+	</li>
+	<li>
+		<a href="/verejnezakazky/hledat?Q=ico%3A66002222&order=1">Poslední veřejné zakázky od Ministerstva pro místní rozvoj</a>
+	</li>
+	<li>
+		<a href="/verejnezakazky/hledat?Q=ico%3A66002222%20oblast:IT&order=1">Poslední veřejné zakázky týkající se IT od MMR</a>
+	</li>
+	<li>
+		<a href="/verejnezakazky/hledat?Q=ico%3A66002222%20cpv:72,48&order=1">Poslední veřejné zakázky od MMR podle CPV kódu</a>
+	</li>
+	<li>
+		<a href="/verejnezakazky/hledat?Q=ico%3A66002222%20AND%20%28NEN%20OR%20NIPEZ%29&order=1">Poslední veřejné zakázky týkající se NEN a NIPEZ</a>
+	</li>
 
 </ul>
 
