improved help and quick info for insolvency

--- a/Web.Statu/Views/Insolvence/Index.cshtml
+++ b/Web.Statu/Views/Insolvence/Index.cshtml
@@ -63,27 +63,20 @@
 	</div>
 </div>
 
-<h2>Ukázky možností <span style="color:red; font-weight:bold">TODO</span></h2>
+<h2>Ukázky možností</h2>
 <ul>
 	<li>
-		<a href="/verejnezakazky/hledat?Q=*&order=1">Poslední veřejné zakázky</a>
+		<a href="/insolvence/hledat?Q=*">Naposledy změněná řízení</a>
 	</li>
 	<li>
-		<a href="/verejnezakazky/hledat?Q=*%20oblast:IT&order=1">Poslední veřejné zakázky v oboru IT</a>
+		<a href="/insolvence/hledat?Q=datumZalozeni%3A%5B2018-01-01+TO+2018-12-31%5D+AND+soud%3AKSSCEUL">Řízení vzniklá v roce 2018 na krajském soudu v Ústí nad Labem</a>
 	</li>
 	<li>
-		<a href="/verejnezakazky/hledat?Q=ico%3A66002222&order=1">Poslední veřejné zakázky od Ministerstva pro místní rozvoj</a>
+		<a href="/insolvence/hledat?Q=jmenodluznik%3A%22Petr+Novák%22">Řízení kde dlužník je osoba se jménem Petr Novák</a>
 	</li>
 	<li>
-		<a href="/verejnezakazky/hledat?Q=ico%3A66002222%20oblast:IT&order=1">Poslední veřejné zakázky týkající se IT od MMR</a>
+		<a href="/insolvence/hledat?Q=Stav%3AKONKURS">Řízení v konkursu</a>
 	</li>
-	<li>
-		<a href="/verejnezakazky/hledat?Q=ico%3A66002222%20cpv:72,48&order=1">Poslední veřejné zakázky od MMR podle CPV kódu</a>
-	</li>
-	<li>
-		<a href="/verejnezakazky/hledat?Q=ico%3A66002222%20AND%20%28NEN%20OR%20NIPEZ%29&order=1">Poslední veřejné zakázky týkající se NEN a NIPEZ</a>
-	</li>
-
 </ul>
 
 
