--- a/Web.Statu/Views/Insolvence/_SearchFormHelpContent.cshtml
+++ b/Web.Statu/Views/Insolvence/_SearchFormHelpContent.cshtml
@@ -65,24 +65,7 @@
 <h3>Zkratky soudů</h3>
 <dl>
 	<dd>
-		<kbd>MSPH</kbd> - Městský soud v Praze<br />
-		<kbd>KSPH</kbd> - Krajský soud v Praze<br />
-		<kbd>KSCB</kbd> - Krajský soud v Českých Budějovicích<br />
-		<kbd>KSTB</kbd> - Krajský soud v Českých Budějovicích – pobočka v Táboře<br />
-		<kbd>KSPL</kbd> - Krajský soud v Plzni<br />
-		<kbd>KSKV</kbd> - Krajský soud v Plzni – pobočka v Karlových Varech<br />
-		<kbd>KSUL</kbd> - Krajský soud v Ústí nad Labem<br />
-		<kbd>KSLB</kbd> - Krajský soud v Ústí nad Labem – pobočka v Liberci<br />
-		<kbd>KSHK</kbd> - Krajský soud v Hradci Králové<br />
-		<kbd>KSPA</kbd> - Krajský soud v Hradci Králové – pobočka v Pardubicích<br />
-		<kbd>KSBR</kbd> - Krajský soud v Brně<br />
-		<kbd>KSJI</kbd> - Krajský soud v Brně – pobočka v Jihlavě<br />
-		<kbd>KSZL</kbd> - Krajský soud v Brně – pobočka ve Zlíně<br />
-		<kbd>KSOS</kbd> - Krajský soud v Ostravě<br />
-		<kbd>KSOL</kbd> - Krajský soud v Ostravě – pobočka v Olomouci<br />
-		<kbd>VSPH</kbd> - Vrchní soud v Praze<br />
-		<kbd>VSOL</kbd> - Vrchní soud v Olomouci<br />
-		<kbd>NSCR</kbd> - Nejvyšší soud České republiky<br />
+		Zkratky soudů včetně adres a kontaktních informací jsou dostupné <a href="https://ispis.cz/soudy" target="_blank">zde</a>.
 	</dd>
 </dl>
 <h3>Pro experty</h3>
