--- a/Web.Statu/Views/Insolvence/Rizeni.cshtml
+++ b/Web.Statu/Views/Insolvence/Rizeni.cshtml
@@ -70,6 +70,8 @@
 }
 else
 {
+	@Html.Partial("_Status", new StavRizeniViewModel { Stav = Model.Rizeni.Stav })
+
 	<h3>Účastníci řízení</h3>
 	<div class="row">
 		<div class="col-sm-6 col-xs-12">
@@ -180,6 +182,12 @@ else
 			<a href="@Url.Action("Dokumenty", "Insolvence", new { id = Model.Rizeni.UrlId() })">Všechny dokumenty (@Model.Rizeni.Dokumenty.Count())</a>
 		</div>
 	</div>
+
+	<script>
+		$(function () {
+			$('[data-toggle="tooltip"]').tooltip()
+		})
+	</script>
 }
 
 
