--- a/Web.Statu/Views/Data/DetailText.cshtml
+++ b/Web.Statu/Views/Data/DetailText.cshtml
@@ -54,7 +54,7 @@
 {
     <p>
         <b>Upozornění</b>: Text přílohy byl získán strojově a nemusí přesně odpovídat originálu. Zejména u strojově nečitelných smluv, kde jsme použili OCR.
-        <a href="@url" target="_blank">originál smlouvy stáhnete odsud</a>
+        <a href="@url" target="_blank">originál dokumentu stáhnete odsud</a>
     </p>
 
     <hr />
