--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -96,7 +96,9 @@
 <div class="footer">
     <div class="footer__content">
         <div class="footer__content__col">
-            <a href="/texty/vize">Vize hlídače státu</a>
+            <a href="/texty/o-serveru">O nás</a>
+            <a href="/texty/vize">Naše vize</a>
+            <a href="/texty/kodex">Náš kodex</a>
             <a href="/texty/o-registru">O registru smluv</a>
             <a href="/texty/kontakt">Kontakt</a>
         </div>
