--- a/Web.Statu/Views/Home/Detail_Child.cshtml
+++ b/Web.Statu/Views/Home/Detail_Child.cshtml
@@ -178,7 +178,7 @@
                                             {
                                                 if (this.User?.IsInRole("novinar") == true)
                                                 {
-                                                    <a href="@Url.Action("KopiePrilohy", new { id = @Model.Id, hash = priloha.hash.Value })" data-link="kopie">(naše kopie)</a>
+                                                    <a href="@Url.Action("KopiePrilohy", new { id = @Model.Id, hash = priloha.hash.Value })" data-link="kopie">(naše kopie)</a> <b>!Pozor, tato smlouva byla zneplatněna a tato příloha není veřejně dostupná!</b>
                                                 }
                                                 else
                                                 {
